tests/general/phase0/ssz_generic/basic_vector/invalid/vec_uint256_1_random_one_byte_less/serialized.ssz
WÐÃCÌµ"LšÎ7Æ$’àe7­¯ÍxðbÛ»>‹«